[tool.poetry]
name = "hexlet-code"
version = "0.6.0.dev1"
description = "This package consists of 5 games to develop your math skills."
authors = ["Yaroslav Pekatoros <y.pekatoros@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ya-pekatoros/python-project-49"
classifiers = [
    "Topic :: Development Status :: 4 - Beta",
	"Topic :: Environment :: Console",
	"Topic :: Operating System :: POSIX :: Linux",
	"Topic :: Programming Language :: Python :: 3.10",
	"Topic :: Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
 	{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
